# stack-doctor

./: .gitignore  README.md  ROOT_CAUSE_VISIBLE_PLAN.md  __init__.py  client.py  dashboard.html  inference_server.py  models.py  openenv.yaml  pyproject.toml  run_live_model.py
data/: .gitignore  convert_to_scenarios.py  filter_triples.py  generated_scenarios.json  generated_scenarios_full.json  scrape_issues.py
hf_space/: Dockerfile  serve.py
server/: Dockerfile  __init__.py  app.py  baselines.py  requirements.txt  scenarios.py  stack_doctor_environment.py  stack_doctor_mcp.py
training/: Dockerfile  eval_stack_doctor.py  stack_doctor_grpo.ipynb  train_stack_doctor.py
